# wiznova.github.io

./: .gitignore  README.md  config.ini  pyproject.toml  readme.md
blagpk/: blag_base.py  devserver.py
content/: second_article.md
content/tests/: hello_world.md  markdown_demo.md
docs/: atom.xml  hello_world.html  index.html  main.css  second_article.html
docs/tags/: a.html  another.html  index.html  is.html  test.html  this.html
docs/tests/: hello_world.html  markdown_demo.html
templates/: base.html
