[tool.poetry]
name = "wiznova.github.io"
version = "0.1.0"
description = ""
authors = ["Sergey Khalil <me@sergeykhalil.com>"]

[tool.poetry.dependencies]
python = "^3.9"
blag = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
