[tool.poetry]
name = "wiznova.github.io"
version = "0.1.0"
description = ""
authors = ["Sergey Khalil <me@sergeykhalil.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Markdown = "^3.4.1"
feedgenerator = "^2.0.0"
Jinja2 = "^3.1.2"
Pygments = "^2.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
